--- a/element-lightbox.html
+++ b/element-lightbox.html
@@ -347,8 +347,8 @@
                     <div class="visual-inner visual-banner-v22 dark-overlay parallax" data-stellar-background-ratio="0.55">
                         <div class="container">
                             <div class="visual-text-large text-left visual-center">
-                                <h1 class="visual-title visual-sub-title">The Lightbox</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit porro laudantium sequi. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <h1 class="visual-title visual-sub-title">SAMPLE TEXT</h1>
+                                <p>123456789123456789123456789123456789123456789</p>
                                 <div class="breadcrumb-block">
                                     <ol class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="index.html"> Home </a></li>
