--- a/team.html
+++ b/team.html
@@ -348,7 +348,7 @@
                         <div class="container">
                             <div class="visual-text-large text-left visual-center">
                                 <h1 class="visual-title visual-sub-title">Meet the Team</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit porro laudantium sequi. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>UwU.</p>
                                 <div class="breadcrumb-block">
                                     <ol class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="index.html"> Home </a></li>
