--- a/element-lightbox.html
+++ b/element-lightbox.html
@@ -410,7 +410,7 @@
                                                         <div class="custom-icon-plus"><span class="sr-only">&nbsp;</span></div>
                                                     </div>
                                                     <div class="info">
-                                                        <h2 class="content-title">Awesome Project</h2>
+                                                        <h2 class="content-title">sample text 2</h2>
                                                     </div>
                                                 </div>
                                             </div>
