--- a/element-lightbox.html
+++ b/element-lightbox.html
@@ -371,14 +371,14 @@
                                     <div class="col-md-6 col-lg-4">
                                         <figure class="caption-hover-full">
                                             <a class="fancybox fancy-pop" href="#lightbox-description"></a>
-                                            <div class="image-wrapper"><img src="img/portfolio-21.jpg" alt="images description"></div>
+                                            <div class="image-wrapper"><img src="img/portfolio-21.gif" alt="images description"></div>
                                             <div class="image-details">
                                                 <div class="figcaption">
                                                     <div class="trigger">
                                                         <div class="custom-icon-plus"><span class="sr-only">&nbsp;</span></div>
                                                     </div>
                                                     <div class="info">
-                                                        <h2 class="content-title">Awesome Project</h2>
+                                                        <h2 class="content-title">perro2</h2>
                                                     </div>
                                                 </div>
                                             </div>
@@ -387,7 +387,7 @@
                                     <div class="col-md-6 col-lg-4">
                                         <figure class="caption-hover-full">
                                             <a class="fancybox fancy-pop" href="#lightbox-description1"></a>
-                                            <div class="image-wrapper"><img src="img/portfolio-22.jpg" alt="images description"></div>
+                                            <div class="image-wrapper"><img src="img/portfolio-22.gif" alt="images description"></div>
                                             <div class="image-details">
                                                 <div class="figcaption">
                                                     <div class="trigger">
