--- a/element-carousels.html
+++ b/element-carousels.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Karol - Roxine</title>
+    <title>Karol Gómez</title>
     <!-- Font Icons -->
     <link media="all" rel="stylesheet" href="css/fonts/icomoon/icomoon.css">
     <link media="all" rel="stylesheet" href="css/fonts/roxine-font-icon/roxine-font.css">
@@ -237,8 +237,8 @@
                                                 <div class="col-lg-3 col-autoheight clearfix">
                                                     <div class="widget-default clearfix">
                                                         <ul class="s-list s-list-pl s-list-mb-10 no-padding">
-                                                            <li><a href="element-google-maps.html"><i class="icon-mark-map"></i> MAPS </a></li>
-                                                            <li><a href="element-media-embed.html"><i class="icon-play"></i> MEDIA EMBEDS </a></li>
+                                                            <li><a href="element-google-maps.html"><i class="icon-mark-map"></i> Enero </a></li>
+                                                            <li><a href="element-media-embed.html"><i class="icon-play"></i> Feberero </a></li>
                                                             <li><a href="element-modal-boxes.html"><i class="icon-move"></i> MODAL BOXES </a></li>
                                                             <li><a href="element-paginations.html"><i class="icon-cogs"></i> PAGINATIONS </a></li>
                                                             <li><a href="element-progressbar.html"><i class="icon-progress-2"></i> PROGRESS BARS </a></li>
