--- a/element-carousels.html
+++ b/element-carousels.html
@@ -239,7 +239,7 @@
                                                         <ul class="s-list s-list-pl s-list-mb-10 no-padding">
                                                             <li><a href="element-google-maps.html"><i class="icon-mark-map"></i> Enero </a></li>
                                                             <li><a href="element-media-embed.html"><i class="icon-play"></i> Feberero </a></li>
-                                                            <li><a href="element-modal-boxes.html"><i class="icon-move"></i> MODAL BOXES </a></li>
+                                                            <li><a href="element-modal-boxes.html"><i class="icon-move"></i> Marzo </a></li>
                                                             <li><a href="element-paginations.html"><i class="icon-cogs"></i> PAGINATIONS </a></li>
                                                             <li><a href="element-progressbar.html"><i class="icon-progress-2"></i> PROGRESS BARS </a></li>
                                                             <li><a href="element-range-sliders.html"><i class="icon-arrow-move"></i> RANGE SLIDER </a></li>
