--- a/element-carousels.html
+++ b/element-carousels.html
@@ -53,7 +53,7 @@
                                     <li class="dropdown" data-animation="fadeIn">
                                         <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Home </a>
                                         <ul class="dropdown-menu no-border-radius">
-                                            <li><a href="index.html"> Creative Agency </a></li>
+                                            <li><a href="index.html"> karol </a></li>
                                             <li><a href="design-studio.html"> Design Studio </a></li>
                                             <li><a href="digital-agency.html"> Digital Agency </a></li>
                                             <li><a href="construction.html"> Construction </a></li>
