--- a/portfolio-no-sidebar-6-col.html
+++ b/portfolio-no-sidebar-6-col.html
@@ -348,13 +348,13 @@
                         <div class="centered">
                             <div class="container">
                                 <div class="visual-text visual-center">
-                                    <h1 class="visual-title visual-sub-title text-white">Portfolio - No Sidebar 6 Col</h1>
+                                    <h1 class="visual-title visual-sub-title text-white">PASTELERIA</h1>
                                     <div class="breadcrumb-block">
                                         <ol class="breadcrumb">
-                                            <li class="breadcrumb-item"><a href="index.html"> Home </a></li>
-                                            <li class="breadcrumb-item"><a href="#"> Protfolio </a></li>
-                                            <li class="breadcrumb-item"><a href="#"> No Sidebar </a></li>
-                                            <li class="breadcrumb-item active"> 6 Col </li>
+                                            <li class="breadcrumb-item"><a href="index.html"> PRODUCTOS </a></li>
+                                            <li class="breadcrumb-item"><a href="#"> RECETAS </a></li>
+                                            <li class="breadcrumb-item"><a href="#"> BLOG </a></li>
+                                            <li class="breadcrumb-item active"> CONTACTO </li>
                                         </ol>
                                     </div>
                                 </div>
@@ -368,19 +368,19 @@
                     <section class="content-block portfolio-block">
                         <ul class="filter-nav filter-nav-v2 text-center button-group filter-button-group">
                             <li>
-                                <button class="is-checked" data-filter="*">ALL WORK</button>
+                                <button class="is-checked" data-filter="*">GRANDE</button>
                             </li>
                             <li>
-                                <button data-filter=".ui">UI/UX DESIGN</button>
+                                <button data-filter=".ui">MEDIANO</button>
                             </li>
                             <li>
-                                <button data-filter=".programming">PROGRAMMING</button>
+                                <button data-filter=".programming">PEQUEÑO</button>
                             </li>
                             <li>
-                                <button data-filter=".photography">PHOTOGRAPHY</button>
+                                <button data-filter=".photography">AZUCAR</button>
                             </li>
                             <li>
-                                <button data-filter=".ecommerce">ECOMMERCE</button>
+                                <button data-filter=".ecommerce">SIN AZUCAR</button>
                             </li>
                         </ul>
                         <div class="container-fluid">
@@ -388,7 +388,7 @@
                                 <div class="gallery-item col-md-6 col-lg-6 col-xl-2 ui photography">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
-                                        <div class="image-wrapper"><img src="img/portfolio-21.jpg" alt="images description"></div>
+                                        <div class="image-wrapper"><img src="img/PASTEL-FRESAS.png" alt="Imagen pastel de fresas"></div>
                                         <div class="image-details">
                                             <div class="figcaption">
                                                 <div class="trigger">
@@ -404,7 +404,7 @@
                                 <div class="gallery-item col-md-6 col-lg-6 col-xl-2 photography">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
-                                        <div class="image-wrapper"><img src="img/portfolio-22.jpg" alt="images description"></div>
+                                        <div class="image-wrapper"><img src="img/PASTEL-AVENA.jpg" alt="Pastel de Avena"></div>
                                         <div class="image-details">
                                             <div class="figcaption">
                                                 <div class="trigger">
@@ -420,7 +420,7 @@
                                 <div class="gallery-item col-md-6 col-lg-6 col-xl-2 ui programming">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
-                                        <div class="image-wrapper"><img src="img/portfolio-23.jpg" alt="images description"></div>
+                                        <div class="image-wrapper"><img src="img/PASTEL-COLORES.jpg" alt="Pastel Colores"></div>
                                         <div class="image-details">
                                             <div class="figcaption">
                                                 <div class="trigger">
@@ -436,7 +436,7 @@
                                 <div class="gallery-item col-md-6 col-lg-6 col-xl-2 ecommerce">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
-                                        <div class="image-wrapper"><img src="img/portfolio-24.jpg" alt="images description"></div>
+                                        <div class="image-wrapper"><img src="img/PASTEL-CHOCOLATE.jpg" alt="Imagen pastel chocolate"></div>
                                         <div class="image-details">
                                             <div class="figcaption">
                                                 <div class="trigger">
@@ -452,7 +452,7 @@
                                 <div class="gallery-item col-md-6 col-lg-6 col-xl-2 programming ui">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
-                                        <div class="image-wrapper"><img src="img/portfolio-25.jpg" alt="images description"></div>
+                                        <div class="image-wrapper"><img src="img/PASTEL-FRUTOSROJOS.jpg" alt="Pastel PASTEL-FRUTOSROJOS"></div>
                                         <div class="image-details">
                                             <div class="figcaption">
                                                 <div class="trigger">
@@ -468,7 +468,7 @@
                                 <div class="gallery-item col-md-6 col-lg-6 col-xl-2 photography">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
-                                        <div class="image-wrapper"><img src="img/portfolio-26.jpg" alt="images description"></div>
+                                        <div class="image-wrapper"><img src="img/PASTEL-NARANJA.jpg" alt="Pastel Naranja"></div>
                                         <div class="image-details">
                                             <div class="figcaption">
                                                 <div class="trigger">
@@ -484,7 +484,7 @@
                                 <div class="gallery-item col-md-6 col-lg-6 col-xl-2 programming">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
-                                        <div class="image-wrapper"><img src="img/portfolio-27.jpg" alt="images description"></div>
+                                        <div class="image-wrapper"><img src="img/PASTEL-CHIP.jpg" alt="Pastel de chips"></div>
                                         <div class="image-details">
                                             <div class="figcaption">
                                                 <div class="trigger">
@@ -500,7 +500,7 @@
                                 <div class="gallery-item col-md-6 col-lg-6 col-xl-2 ecommerce">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
-                                        <div class="image-wrapper"><img src="img/portfolio-28.jpg" alt="images description"></div>
+                                        <div class="image-wrapper"><img src="img/PASTEL-PIÑA.jpg" alt="Pastel de piña"></div>
                                         <div class="image-details">
                                             <div class="figcaption">
                                                 <div class="trigger">
@@ -516,7 +516,7 @@
                                 <div class="gallery-item col-md-6 col-lg-6 col-xl-2 ecommerce">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
-                                        <div class="image-wrapper"><img src="img/portfolio-29.jpg" alt="images description"></div>
+                                        <div class="image-wrapper"><img src="img/PASTEL-MANZANA.jpg" alt="Pastel de manzana"></div>
                                         <div class="image-details">
                                             <div class="figcaption">
                                                 <div class="trigger">
@@ -532,7 +532,7 @@
                                 <div class="gallery-item col-md-6 col-lg-6 col-xl-2 photography">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
-                                        <div class="image-wrapper"><img src="img/portfolio-22.jpg" alt="images description"></div>
+                                        <div class="image-wrapper"><img src="img/PASTEL-CHOCOLATEN-SIN-AZUCAR.jpg" alt="Pastel chocolate sin azucar"></div>
                                         <div class="image-details">
                                             <div class="figcaption">
                                                 <div class="trigger">
@@ -548,7 +548,7 @@
                                 <div class="gallery-item col-md-6 col-lg-6 col-xl-2 ui programming">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
-                                        <div class="image-wrapper"><img src="img/portfolio-23.jpg" alt="images description"></div>
+                                        <div class="image-wrapper"><img src="img/PASTEL-FRUIT-CAKE.jpg" alt="Pastel fruit cake"></div>
                                         <div class="image-details">
                                             <div class="figcaption">
                                                 <div class="trigger">
@@ -564,7 +564,7 @@
                                 <div class="gallery-item col-md-6 col-lg-6 col-xl-2 ecommerce">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
-                                        <div class="image-wrapper"><img src="img/portfolio-24.jpg" alt="images description"></div>
+                                        <div class="image-wrapper"><img src="img/PASTEL-ZANAHORIA.jpg" alt="Pastel de Zanahoria"></div>
                                         <div class="image-details">
                                             <div class="figcaption">
                                                 <div class="trigger">
