--- a/element-lightbox.html
+++ b/element-lightbox.html
@@ -347,8 +347,8 @@
                     <div class="visual-inner visual-banner-v22 dark-overlay parallax" data-stellar-background-ratio="0.55">
                         <div class="container">
                             <div class="visual-text-large text-left visual-center">
-                                <h1 class="visual-title visual-sub-title">The Lightbox</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit porro laudantium sequi. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <h1 class="visual-title visual-sub-title">Cambiando vidas con las mejores historias</h1>
+                                <p>Los mejores videos reflexivos enfocados en cambiar vidas con historias reales</p>
                                 <div class="breadcrumb-block">
                                     <ol class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="index.html"> Home </a></li>
@@ -366,7 +366,7 @@
                     <section class="content-block">
                         <div class="container">
                             <div class="demo-wrapper">
-                                <h3 class="text-center element-heading">Content Lightbox</h3>
+                                <h3 class="text-center element-heading colorsito">Nuestras historias más recientes</h3>
                                 <div class="row default-gallery">
                                     <div class="col-md-6 col-lg-4">
                                         <figure class="caption-hover-full">
@@ -454,7 +454,7 @@
                                         </div>
                                         <div class="col-md-8">
                                             <h3 class="content-title mt-4">Image Title</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+                                            <p>ola</p>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
                                         </div>
                                     </div>
