--- a/element-carousels.html
+++ b/element-carousels.html
@@ -47,14 +47,14 @@
                             <button type="button" class="navbar-toggler navbar-toggler-left" data-toggle="collapse" data-target="#mega-menu">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
-                            <a class="navbar-brand mr-auto m-sm-auto" href="index.html"> <img src="img/logo.svg" alt="roxine"> <img src="img/logo-dark.svg" alt="roxine"> </a>
+                            <a class="navbar-brand mr-auto m-sm-auto" href="index.html"> <img src="img/img-08.jpg" alt="roxine"> <img src="img/logo-dark.svg" alt="roxine"> </a>
                             <div class="collapse navbar-collapse flex-row-reverse" id="mega-menu">
                                 <ul class="nav navbar-nav">
                                     <li class="dropdown" data-animation="fadeIn">
                                         <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Home </a>
                                         <ul class="dropdown-menu no-border-radius">
                                             <li><a href="index.html"> karol </a></li>
-                                            <li><a href="design-studio.html"> Design Studio </a></li>
+                                            <li><a href="design-studio.html"> Stefany </a></li>
                                             <li><a href="digital-agency.html"> Digital Agency </a></li>
                                             <li><a href="construction.html"> Construction </a></li>
                                             <li><a href="corporate.html"> Corporate </a></li>
