--- a/element-carousels.html
+++ b/element-carousels.html
@@ -48,6 +48,7 @@
                                 <span class="navbar-toggler-icon"></span>
                             </button>
                             <a class="navbar-brand mr-auto m-sm-auto" href="index.html"> <img src="img/img-08.jpg" alt="roxine"> <img src="img/logo-dark.svg" alt="roxine"> </a>
+                            <a class="navbar-brand mr-auto m-sm-auto" href="index.html"> <img src="img/logo.svg" alt="roxine"> <img src="img/visa.png" alt="roxine"> </a>
                             <div class="collapse navbar-collapse flex-row-reverse" id="mega-menu">
                                 <ul class="nav navbar-nav">
                                     <li class="dropdown" data-animation="fadeIn">
