--- a/element-carousels.html
+++ b/element-carousels.html
@@ -275,11 +275,11 @@
                                     <li class="dropdown right-dropdown" data-animation="fadeIn">
                                         <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Blog </a>
                                         <ul class="dropdown-menu no-border-radius">
-                                        	<li><a href="blog-one-col.html"> Blog One Column </a></li>
-                                            <li><a href="blog-two-col.html"> Blog Two Column </a></li>
-                                            <li><a href="blog-three-col.html"> Blog Three Column </a></li>
-                                            <li><a href="blog-left-sidebar.html"> Blog Left Sidebar </a></li>
-                                            <li><a href="blog-right-sidebar.html"> Blog Right Sidebar </a></li>
+                                        	<li><a href="blog-one-col.html"> ojos </a></li>
+                                            <li><a href="blog-two-col.html"> rostro </a></li>
+                                            <li><a href="blog-three-col.html"> Brochas </a></li>
+                                            <li><a href="blog-left-sidebar.html"> cabello </a></li>
+                                            <li><a href="blog-right-sidebar.html"> labios </a></li>
                                             <li><a href="blog-masonary.html"> Masonary </a></li>
                                             <li><a href="blog-full-width.html"> Full Width </a></li>
                                             <li><a href="blog-single.html"> Blog Single </a></li>
