--- a/element-carousels.html
+++ b/element-carousels.html
@@ -47,8 +47,7 @@
                             <button type="button" class="navbar-toggler navbar-toggler-left" data-toggle="collapse" data-target="#mega-menu">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
-                            <a class="navbar-brand mr-auto m-sm-auto" href="index.html"> <img src="img/img-08.jpg" alt="roxine"> <img src="img/logo-dark.svg" alt="roxine"> </a>
-                            <a class="navbar-brand mr-auto m-sm-auto" href="index.html"> <img src="img/logo.svg" alt="roxine"> <img src="img/visa.png" alt="roxine"> </a>
+                            <a class="navbar-brand mr-auto m-sm-auto" href="index.html"> <img src="img/logo.svg" alt="roxine"> <img src="img/logo-dark.svg" alt="roxine"> </a>
                             <div class="collapse navbar-collapse flex-row-reverse" id="mega-menu">
                                 <ul class="nav navbar-nav">
                                     <li class="dropdown" data-animation="fadeIn">
@@ -455,6 +454,7 @@
                                                     <h2>Jason Doe</h2>
                                                     <span class="designation bottom-m-space">CEO - ENVATO INC.</span>
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                                                    <p>trendy oficial</p>
                                                 </div>
                                             </div>
                                         </div>
