--- a/portfolio-3-col.html
+++ b/portfolio-3-col.html
@@ -348,7 +348,7 @@
                         <div class="centered">
                             <div class="container">
                                 <div class="visual-text visual-center">
-                                    <h1 class="visual-title visual-sub-title text-white">Portfolio - Boxed Grid</h1>
+                                    <h1 class="visual-title visual-sub-title text-white">Belleza&nbsp;</h1>
                                     <div class="breadcrumb-block">
                                         <ol class="breadcrumb">
                                             <li class="breadcrumb-item"><a href="index.html"> Home </a></li>
