--- a/construction.html
+++ b/construction.html
@@ -50,7 +50,7 @@
                                             </li>
                                             <li>
                                                 <div class="dropdown mini-nav mini-nav-no-bg-hover">
-                                                    <a href="mailto:youremail@waituk.com" class="nav-link"><span class="custom-icon-email1"></span> youremail@waituk.com</a>
+                                                    <a href="mailto:youremail@waituk.com" class="nav-link"><span class="custom-icon-email1"></span> kstefanygomez@gmail.com</a>
                                                 </div>
                                             </li>
                                         </ul>
