--- a/construction.html
+++ b/construction.html
@@ -74,7 +74,7 @@
                                             </li>
                                             <li>
                                                 <div class="dropdown mini-nav mini-nav-no-bg-hover">
-                                                    <a href="#"> EN </a>
+                                                    <a href="#"> IDIOMA </a>
                                                     <ul class="dropdown-menu pad-small no-border-radius hidden-xs fadeIn">
                                                         <li><a href="#" class="pad-narrow"> GB </a></li>
                                                         <li><a href="#" class="pad-narrow"> DE </a></li>
