--- a/construction.html
+++ b/construction.html
@@ -76,11 +76,11 @@
                                                 <div class="dropdown mini-nav mini-nav-no-bg-hover">
                                                     <a href="#"> IDIOMA </a>
                                                     <ul class="dropdown-menu pad-small no-border-radius hidden-xs fadeIn">
-                                                        <li><a href="#" class="pad-narrow"> GB </a></li>
-                                                        <li><a href="#" class="pad-narrow"> DE </a></li>
-                                                        <li><a href="#" class="pad-narrow"> FR </a></li>
-                                                        <li><a href="#" class="pad-narrow"> NP </a></li>
-                                                        <li><a href="#" class="pad-narrow"> IN </a></li>
+                                                        <li><a href="#" class="pad-narrow"> ESPAÑOL </a></li>
+                                                        <li><a href="#" class="pad-narrow"> INGLÉS </a></li>
+                                                        <li><a href="#" class="pad-narrow"> FRANCÉS </a></li>
+                                                        <li><a href="#" class="pad-narrow"> MANDARÍN </a></li>
+                                                        <li><a href="#" class="pad-narrow"> PORTUGUES </a></li>
                                                     </ul>
                                                 </div>
                                             </li>
