--- a/construction.html
+++ b/construction.html
@@ -100,7 +100,7 @@
                             <button type="button" class="navbar-toggler navbar-toggler-left" data-toggle="collapse" data-target="#mega-menu">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
-                            <a class="navbar-brand mr-auto m-sm-auto" href="index.html"> <img src="img/logo.svg" alt="roxine"> </a>
+                            <a class="navbar-brand mr-auto m-sm-auto" href="index.html"> <img src="img/paisaje.jpg" alt="roxine"> </a>
                             <div class="collapse navbar-collapse flex-row-reverse" id="mega-menu">
                                 <ul class="nav navbar-nav">
                                     <li class="dropdown" data-animation="fadeIn">
