--- a/construction.html
+++ b/construction.html
@@ -104,7 +104,7 @@
                             <div class="collapse navbar-collapse flex-row-reverse" id="mega-menu">
                                 <ul class="nav navbar-nav">
                                     <li class="dropdown" data-animation="fadeIn">
-                                        <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Home </a>
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Inicio"> Home </a>
                                         <ul class="dropdown-menu no-border-radius">
                                             <li><a href="index.html"> Creative Agency </a></li>
                                             <li><a href="design-studio.html"> Design Studio </a></li>
