--- a/construction.html
+++ b/construction.html
@@ -106,11 +106,11 @@
                                     <li class="dropdown" data-animation="fadeIn">
                                         <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Inicio"> Home </a>
                                         <ul class="dropdown-menu no-border-radius">
-                                            <li><a href="index.html"> Creative Agency </a></li>
-                                            <li><a href="design-studio.html"> Design Studio </a></li>
-                                            <li><a href="digital-agency.html"> Digital Agency </a></li>
-                                            <li><a href="construction.html"> Construction </a></li>
-                                            <li><a href="corporate.html"> Corporate </a></li>
+                                            <li><a href="index.html"> Infromación general </a></li>
+                                            <li><a href="design-studio.html"> Personalización </a></li>
+                                            <li><a href="digital-agency.html"> Diseños </a></li>
+                                            <li><a href="construction.html"> Velas </a></li>
+                                            <li><a href="corporate.html"> Elaboración </a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown" data-animation="fadeIn">
