--- a/construction.html
+++ b/construction.html
@@ -114,7 +114,7 @@
                                         </ul>
                                     </li>
                                     <li class="dropdown" data-animation="fadeIn">
-                                        <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Features </a>
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Esencias </a>
                                         <ul class="dropdown-menu  no-border-radius">
                                             <li class="dropdown dropdown-right dropdown-parent">
                                                 <a class="sub-marker" href="#">Header Styles <i class="icon-ios-more icn-right"></i></a>
