--- a/construction.html
+++ b/construction.html
@@ -79,7 +79,7 @@
                                                         <li><a href="#" class="pad-narrow"> ESPAÑOL </a></li>
                                                         <li><a href="#" class="pad-narrow"> INGLÉS </a></li>
                                                         <li><a href="#" class="pad-narrow"> FRANCÉS </a></li>
-                                                        <li><a href="#" class="pad-narrow"> MANDARÍN </a></li>
+                                                        <li><a href="#" class="pad-narrow"> CHINO </a></li>
                                                         <li><a href="#" class="pad-narrow"> PORTUGUES </a></li>
                                                     </ul>
                                                 </div>
@@ -100,7 +100,7 @@
                             <button type="button" class="navbar-toggler navbar-toggler-left" data-toggle="collapse" data-target="#mega-menu">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
-                            <a class="navbar-brand mr-auto m-sm-auto" href="index.html"> <img src="img/paisaje.jpg" alt="roxine"> </a>
+                            <a class="navbar-brand mr-auto m-sm-auto" href="index.html"> <img src="img/logo.svg" alt="roxine"> </a>
                             <div class="collapse navbar-collapse flex-row-reverse" id="mega-menu">
                                 <ul class="nav navbar-nav">
                                     <li class="dropdown" data-animation="fadeIn">
@@ -119,16 +119,13 @@
                                             <li class="dropdown dropdown-right dropdown-parent">
                                                 <a class="sub-marker" href="#">Header Styles <i class="icon-ios-more icn-right"></i></a>
                                                 <ul class="dropdown-menu dropdown-menu-indent-sm no-border-radius">
-                                                    <li><a href="header-v1.html"> Header v1 </a></li>
-                                                    <li><a href="header-v2.html"> Header v2 </a></li>
-                                                    <li><a href="header-v3.html"> Header v3 </a></li>
-                                                    <li><a href="header-v4.html"> Header v4 </a></li>
-                                                    <li><a href="header-v5.html"> Header v5 </a></li>
-                                                    <li><a href="header-v6.html"> Header v6 </a></li>
-                                                    <li><a href="header-v7.html"> Header v7 </a></li>
-                                                    <li><a href="header-v8.html"> Header v8 </a></li>
-                                                    <li><a href="header-v9.html"> Header v9 </a></li>
-                                                    <li><a href="header-v10.html"> Header v10 </a></li>
+                                                    <li><a href="header-v1.html"> Cítricas </a></li>
+                                                    <li><a href="header-v2.html"> Dulces </a></li>
+                                                    <li><a href="header-v3.html"> Exóticas </a></li>
+                                                    <li><a href="header-v4.html"> Frescas </a></li>
+                                                    <li><a href="header-v5.html"> Elegantes </a></li>
+                                                    <li><a href="header-v6.html"> Pasionales </a></li>
+
                                                 </ul>
                                             </li>
                                             <li class="dropdown dropdown-right dropdown-parent">
