--- a/construction.html
+++ b/construction.html
@@ -119,16 +119,11 @@
                                             <li class="dropdown dropdown-right dropdown-parent">
                                                 <a class="sub-marker" href="#">Header Styles <i class="icon-ios-more icn-right"></i></a>
                                                 <ul class="dropdown-menu dropdown-menu-indent-sm no-border-radius">
-                                                    <li><a href="header-v1.html"> Frescas </a></li>
-                                                    <li><a href="header-v2.html"> Cítricas v2 </a></li>
+                                                    <li><a href="header-v1.html"> Cítricas </a></li>
+                                                    <li><a href="header-v2.html"> Cítricas </a></li>
                                                     <li><a href="header-v3.html"> Elegantes </a></li>
                                                     <li><a href="header-v4.html"> Pasionales </a></li>
-                                                    <li><a href="header-v5.html"> Header v5 </a></li>
-                                                    <li><a href="header-v6.html"> Header v6 </a></li>
-                                                    <li><a href="header-v7.html"> Header v7 </a></li>
-                                                    <li><a href="header-v8.html"> Header v8 </a></li>
-                                                    <li><a href="header-v9.html"> Header v9 </a></li>
-                                                    <li><a href="header-v10.html"> Header v10 </a></li>
+                                                    
                                                 </ul>
                                             </li>
                                             <li class="dropdown dropdown-right dropdown-parent">
